--- a/about_class.html
+++ b/about_class.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Creators Academy | 授業内容</title>
 	<link href="css/reset.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
