--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
 		</header>
 
 		<main id="main_home">
-			<div id="gazou_shikisai">
-				<img src="images/top_gazou_shikisai_v2.png">
-			</div>
+			<picture id="gazou_shikisai">
+				<source media="(max-width: 550px)" srcset="images/top_gazou_shikisai_v3_smaho.png">
+				<img src="images/top_gazou_shikisai_v2.png" alt="メイン画像" style="width: 100%; object-fit: cover;">
+			</picture>
 			<div id="gazou_concrete">
 				<h2>クリエイターズアカデミーは、<br>
 					あなたがWEBデザイナー<br>
