--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="">
+	<meta name="description" content="目黒/町田にあるWEBデザイン/グラフィックデザインを学べる職業訓練施設です。">
 	<meta name="keywords" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Creators Academy</title>
