--- a/about_class.html
+++ b/about_class.html
@@ -55,7 +55,7 @@
 					<div class="menu-content">
 						<ul id="menu_all">
 							<li class="parent_list">
-								<a href="#" class="ichikaisou">HOME</a>
+								<a href="index.html" class="ichikaisou">HOME</a>
 							</li>
 							<li class="parent_list">
 								<input type="checkbox" id="menu-content-check-shisetsu">
@@ -110,12 +110,15 @@
 					<div id="graphic_soft">
 						<p class="description_img"><img src="images/about_class/tablet.png" alt="グラフィックソフト"></p>
 						<h3>グラフィックソフト</h3>
-						<p class="description_text">業界標準の二大グラフィックソフト、<span>Adobe Illustrator</span>と<span>Adobe Photoshop</span>を基礎から実践的に習得できます。</p>
+						<p class="description_text">業界標準の二大グラフィックソフト、<span>Adobe Illustrator</span>と<span>Adobe
+								Photoshop</span>を基礎から実践的に習得できます。</p>
 					</div>
 					<div id="web_seisaku">
 						<p class="description_img"><img src="images/about_class/www.png" alt="WEBサイト制作"></p>
 						<h3>WEBサイト制作</h3>
-						<p class="description_text"><span>HTML</span>や<span>CSS</span>、<span>Javascript</span>など、WEBサイト制作に必須となるコードの書き方や、WEB制作をする上で必要となるソフトウェアの使い方を習得できます。</p>
+						<p class="description_text">
+							<span>HTML</span>や<span>CSS</span>、<span>Javascript</span>など、WEBサイト制作に必須となるコードの書き方や、WEB制作をする上で必要となるソフトウェアの使い方を習得できます。
+						</p>
 
 					</div>
 				</div><!--syousai_contents-->
