--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<div class="menu-content">
 						<ul id="menu_all">
 							<li class="parent_list">
-								<a href="#" class="ichikaisou">HOME</a>
+								<a href="index.html" class="ichikaisou">HOME</a>
 							</li>
 							<li class="parent_list">
 								<input type="checkbox" id="menu-content-check-shisetsu">
