--- a/about_class.html
+++ b/about_class.html
@@ -3,12 +3,13 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+	<meta name="description" content="目黒/町田にあるWEBデザイン/グラフィックデザインを学べる職業訓練施設です。">
+	<meta name="keywords" content="WEBデザイン, グラフィックデザイン, 職業訓練, 職業訓練校, 職業訓練施設, 目黒, 町田, 就職支援, Photoshop, Illustrator, HTML, CSS, Javascript, JQuery">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Creators Academy | 授業内容</title>
+	<title>Creators Academy</title>
 	<link href="css/reset.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
+	<link rel="icon" href="c-aca_favicon.ico">
 </head>
 
 <body>
